--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -1,4 +1,4 @@
-{% extends 'rango/base.html' %}
+<!-- {% extends 'rango/base.html' %}
 {% load staticfiles %}
 {% block title_block %}
     Login
@@ -13,4 +13,4 @@
     <br />
     <input type="submit" value="submit" />
 </form>
-{% endblock %}
+{% endblock %} -->
