--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -1,4 +1,4 @@
-{% extends 'rango/base.html' %}
+<!-- {% extends 'rango/base.html' %}
 {% load staticfiles %}
 
 {% block title_block %}
@@ -23,4 +23,4 @@ Rango says: <strong>register here!</strong><br />
     <input type="submit" name="submit" value="Register" />
 </form>
 {% endif %}
-{% endblock %}
+{% endblock %} -->
